fix layout issue

--- a/src/app/components/layout/layout.component.css
+++ b/src/app/components/layout/layout.component.css
@@ -14,7 +14,6 @@
   @apply lg:w-[calc(100%-240px)] w-full;
 }
 
-.page-wrapper{
-    @apply h-[calc(100vh-85px)] pt-[25px] bg-[rgb(26,44,56)]
+.page-wrapper {
+  @apply h-[calc(100vh-60px)] pt-[25px]  bg-[rgb(26,44,56)] overflow-y-auto;
 }
-
